# Kaizen

./: .gitignore  README.md  config.json  main.py  pyproject.toml
auth/: face_auth.py
components/todo/: todo_core.py  todo_ui.py
const/: keys.py  mapper.py  prompt_template.py
helpers/: agent.py  bot.py  client.py  config.py  gen_token.py  speak.py  update_cred.py
tools/: get_weather.py  google_meet.py  google_tool.py  open_app.py  spotify.py  todo.py  tools.py  whatsapp.py  yt.py
ui/: bg.py  face_auth_ui.py  home.py  setting.py  setup.py
