[project]
name = "kaizen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "numpy>=2.2.6",
    "onnxruntime==1.16.3",
    "openai>=2.30.0",
    "pillow>=12.2.0",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pywhatkit>=5.4",
    "requests>=2.33.1",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.16.0",
    "yt-dlp>=2026.3.17",
]
