[project]
name = "kaizen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "deepface>=0.0.99",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "numpy>=2.2.6",
    "onnxruntime==1.16.3",
    "openai>=2.30.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pywhatkit>=5.4",
    "requests>=2.33.1",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.16.0",
    "tf-keras>=2.21.0",
    "yt-dlp>=2026.3.17",
]
